laravel/chronoLux/public/css/product_page.css
header
{
    height: 600px; /*Change header in header.css, this is only place where height is changed*/
    z-index: 1;
}

.lower-header
{
    display: grid;
    place-items: center;
}

.product-catalog {
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
    margin-top: -50px;
    margin-bottom: 20px;
    padding: 20px 20px 20px 20px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
    z-index: 10;
    background-color: white;
    border-radius: 20px;
}

.product-grid{
    display: grid;
    text-align: center;
    grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
    gap: 20px; /* Add spacing */
}

.product-container {
    border-radius: 20px;
    padding: 0px;
    width: 330px;
    height: 464px;
    margin: 0 auto; /* Centers items inside grid cells */
    transition: transform 0.5s ease, box-shadow 0.5s ease;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
    position: relative;
}

.product-container:hover {
    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
    transform: translateY(-5px);
    transition: transform 0.5s ease, box-shadow 0.5s ease;
    cursor: pointer;
}


.product-image {
    width: 330px;
    height: 330px;
    border-radius: 20px;
    padding: 20px; /* Padding on the container, not the img */
}

.img-product {
    width: 100%;
    height: 100%;
    border-radius: 20px; /* Ensures rounded corners */
    object-fit: cover;
}

.category-title{
    font-size: 10rem;
    font-weight: bold;
    margin-top: 60px;
    color: #eee;
    text-align: center;
}

.add-to-cart {
    width: 100%;
    padding: 12px;
    margin-top: 5px;
    z-index: 2;
    background-color: #3b6048;
    color: white;
    border: none;
    border-radius: 20px;
    font-size: 16px;
    font-weight: bold;
    cursor: pointer;
}

.product-info h2 {
    font-size: clamp(14px, 2vw, 18px);
    margin-top: 10px;
    text-align: left;
}

.product-info {
    display: grid;
    grid-template-columns: 1fr;
    padding: 0 20px;
    gap: 2px;
}

.price {
    font-weight: bold;
    font-size: clamp(20px, 2vw, 18px);
    text-align: right;
    align-self: flex-end;
    margin-top: -32px;
    margin-right: 20px;
}

.reviews {
    display: flex;
    align-items: center;
    text-align: left;
    font-size: 12px;
    color: gray;
    margin-bottom: 10px;
}

.star {
    font-size: 14px;
    margin-right: 5px;
}

.product-menu{
    padding: 5px 40px;
    margin: 0 0 15px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}


.product-menu button{
    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
    margin-right: 5px;
    padding: 10px 20px;
    border-radius: 20px;
    cursor: pointer;
    border: 1px solid #d1d1d1;
}

.paging {
    display: flex;
    align-items: center;
    margin-top: 20px;
    position: relative;
    justify-content: center;
    padding: 20px;
}


.prev, .next {
    position: absolute;
    display: flex;
    align-items: center;
    padding: 10px 20px;
    border-radius: 20px;
    cursor: pointer;
    border: 1px solid #d1d1d1;
    gap: 8px;
}

.prev {
    left: 20px;
}

.next {
    right: 20px;
}

.page-numbering button{
    background-color: white;
    padding: 10px 15px;
    border: 1px solid #d1d1d1;
    border-radius: 10px;
    cursor: pointer;
} 

.page-numbering button:hover, .prev:hover, .next:hover {
    background-color: #f1f1f1;
}


.clickable-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}

/************ Modal window for sorting  ***********/
/* MODAL FILTER */
.filter-modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
    z-index: 1000;
}
.filter-modal select
{
    border: 1px solid rgb(188, 188, 188);
    padding: 10px;
    margin-left: 20px;
    border-radius: 10px;
    width: 120px;
    text-align: center;
}
.filter-content h3
{
    margin-top: 25px;
    margin-bottom: 15px;
}
.filter-content {
    background: white;
    padding: 20px;
    width: 360px;
    height: 450px;
    border-radius: 20px;
    text-align: center;
    position: relative;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
#label-size
{
    margin-top: 10px;
    margin-bottom: 5px;
}
.selects
{
    margin-bottom: 10px;
}
.selects span
{
    display: block;
}
.filter-modal-holder
{
    margin: 5px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 230px;
}

.close-btn {
    position: absolute;
    top: 10px;
    right: 15px;
    font-size: 20px;
    cursor: pointer;
}

.size-options 
{
    width: 270px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 10px;
}

select{
    cursor: pointer;
}

.size-options input[type="checkbox"] {
    width: 20px;
    height: 20px;
    cursor: pointer;
}
.price-range input[type="range"]{
    cursor: pointer;   
}

.apply-filter {
    background-color: #3b6048;
    color: white;
    border: none;
    cursor: pointer;
    margin-top: 20px;
    padding: 15px 25px;
    border-radius: 20px;
    width: 40%;
}

.apply-filter:hover {
    background-color: #2f4c39;
}
.price-range
{
    margin-top: 20px;
    display: flex;
    flex-direction: column;
}
.price-range span
{
    margin-top: 5px;
}
/************************* Modal Sort *************************/
.sort-modal 
{
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
    z-index: 1000;
}
.sort-modal h3
{
    padding-bottom: 20px;
}
.sort-modal-holder
{
    width: 80%;
    padding: 5px 0px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.sort-modal button
{
    margin-top: 30px;
    padding: 20px;
    border-radius: 20px;
    width: 40%;
}
.sort-modal select
{
    border: 1px solid rgb(188, 188, 188);
    padding: 10px;
    margin-left: 20px;
    border-radius: 10px;
    width: 120px;
    text-align: center;
}

.sort-content 
{
    background: white;
    padding: 20px;
    width: 350px;
    height: 300px;
    border-radius: 20px;
    text-align: center;
    position: relative;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.close-btn 
{
    position: absolute;
    top: 10px;
    right: 15px;
    font-size: 20px;
    cursor: pointer;
}

.apply-sort 
{
    background-color: #3b6048;
    color: white;
    border: none;
    margin-top: 10px;
    cursor: pointer;
    padding: 15px 25px !important;
}

.apply-sort:hover 
{
    background-color: #2f4c39;
}



/************************* MEDIA *************************/
@media (max-width: 1200px) {
    .product-catalog{
        width: 100%;
    }
}

@media (max-width: 1065px) {
    .product-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 900px) {
    .category-title{
        margin-top: 100px;
        font-size: 7rem;
    }
    .product-catalog{
        width: 100%;
    }
}

@media (max-width: 710px) {
    .product-grid {
        grid-template-columns: 1fr;
    }
    .page-numbering{
        display: none;
    }

}

@media (max-width: 670px) {
    .category-title{
        font-size: 5rem;
        width: 80%;
    }
}

@media (max-width: 500px) {
    .product-menu h4{
        font-size: 0.75rem;
    }
    .product-menu button{
        padding: 5px 10px;
    }
    
    .product-menu{
        padding: 5px 20px;
    }
}

@media (max-width: 400px)
{
    .sort-content, .filter-content
    {
        width: 330px;
    }
}

